# web-app-template

./: .coveragerc  LICENSE  README.md  pytest.ini  setup.cfg
src/cli/: manage.py
src/config/: asgi.py  settings.py  urls.py  wsgi.py
tests/unit/: __init__.py  unit_test.py
