# MIT License

# Copyright (c) 2022 Piotr Wysocki

# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:

# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.

# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

[metadata]
name=appy
version=0.0.1
author=Piotr Wysocki
author_email=piotr@onmyown.dev
url=https://github.com/onmyowndev/appy

[options]
package_dir =
    = src
packages = find:

install_requires =
    django>=4.1.4

[options.packages.find]
where = src

[options.extras_require]
dev =
    bandit>=1.7.4
    black>=22.10.0
    build>=0.9.0
    coverage>=6.5.0
    flake8>=5.0.4
    pre-commit>=2.20.0
    pyclean>=2.2.0
    pylint>=2.15.5
    pytest>=7.2.0
    pytest-cov>=4.0.0
    pytest-django>=4.5.2
    tox>=4.0.6

[options.entry_points]
console_scripts = 
    django-manage = cli.manage:main
